--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
    <h2>Hello, this is my first line of the file </h2>
+   <h2>Hello, this is my second line of the file </h2>  
 </body>
 </html>
