--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Test html for Jenkins Docker pipeline</title>
 </head>
 <body>
-   <h2>Hello, this is my first line of the file </h2>
-   <h2>Hello, this is my second line of the file </h2>  
+   <h2>Hello, this is my first line of the file 
+        this is my second line of the file </h2>  
 </body>
 </html>
