--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
 	<h2>Hello, this is my first line of the file </h2>
           <h2>   this is my second line of the file </h2>  
+	     <h2>   this is my third line of the file </h2>
+
 </body>
 </html>
